src/objects/Allowance__c.object
<CustomObject>
    <fields>
        <fullName>Allowance_Amount__c</fullName>
        <label>Allowance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allowance_Code__c</fullName>
        <label>Allowance Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowance_Coupon__c</fullName>
        <label>Allowance Coupon #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowance_Redemption_Code__c</fullName>
        <label>Allowance Redemption Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Orders__c</referenceTo>
        <relationshipLabel>Allowances</relationshipLabel>
        <relationshipName>Allowances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Redeemed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redeemed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spl_Allowance_Code_Descr__c</fullName>
        <label>Special Allowance Code  Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VW_Loyalty_Coupon_Code__c</fullName>
        <label>VW Loyalty Coupon Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Allowance</label>
    <nameField>
        <label>Allowance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allowances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>